$Id$                       -*-text-*-


**** 1.07 [unreleased]

Fix rt.cpan.org #114917

	Net::DNS::ZoneFile fails to parse mixed case mnemonics

Fix rt.cpan.org #114876

	Use of uninitialized value in lc at MSWin32.pm line 77

Fix rt.cpan.org #114819

	Net::DNS fails to compile with taint checks enabled


**** 1.06 May 27, 2016

Fix rt.cpan.org #114351

	Case sensitive compression breaks resolver->nameservers()

Fix rt.cpan.org #113579

	Net::DNS::Resolver dies on scoped IPv6 nameserver address

Fix rt.cpan.org #113020

	Resolve::Recurse Hangs

Fix rt.cpan.org #112860

	improperly terminated AXFR at t/08-IPv4.t line 446.


**** 1.05 March 7, 2016

Fix rt.cpan.org #111559

	1.04: TSIG not working anymore (TSIG.pm)

Fix rt.cpan.org #108908

	Installing recent version gets shadowed by old version.
	Warnings added to Makefile.PL and t/00-version.t.

Fix rt.cpan.org #66900

	Net::DNS::Async unable to retry truncated UDP using TCP because
	of limitations in Net::DNS.


**** 1.04 December 8, 2015

Fix rt.cpan.org #109183

	Semantics of "retry" and "retrans" options has changed with 1.03

Fix rt.cpan.org #109152

	Deprecated method make_query_packet breaks calling code

Fix rt.cpan.org #109135

	Resolver behaves differently with long and short IPv6 address format

Fix rt.cpan.org #108745

	Net::DNS::Resolver bgsend


**** 1.03 November 6, 2015

Fix rt.cpan.org #107897

	t/10-recurse.t freezes, never completes

Fix rt.cpan.org #101978

	Update Net::DNS to use IO::Socket::IP

Fix rt.cpan.org #84375

	Timeout doesn't work with bgsend/bgread

Fix rt.cpan.org #47050

	persistent sockets for Resolver::bg(send|read|isready)

Fix rt.cpan.org #15515

	bgsend on TCP


**** 1.02 September 16, 2015

Fix rt.cpan.org #107052

 	suppress messages: Can't locate Net/DNS/Resolver/linux.pm

Fix rt.cpan.org #106916

	Dependency on MIME::Base32 makes Net::DNS not installable on MSWin32

Fix rt.cpan.org #106565

	Net::DNS::Resolver::Recurse and IPv6 Reverse DNS

Fix rt.cpan.org #105808
